--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pokedex",
   "version": "1.0.0",
-  "description": "",
+  "description": "Proyecto pokedex",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/SaulT/Pokedex/issues"
   },
-  "homepage": "https://github.com/SaulT/Pokedex#readme"
+  "homepage": "https://github.com/SaulT/Pokedex#readme",
+  "dependencies": {
+    "cross-fetch": "^3.1.4"
+  }
 }
